# applications_permission_manager

./: .gitignore  AGENTS.md  BUILD.gn  CLAUDE.md  OAT.xml  README.en.md  README.md  README_zh.md  build-profile.json5  bundle.json  hvigorw.bat  local.properties  oh-package-lock.json5  oh-package.json5  package-lock.json  package.json
permissionmanager/: BUILD.gn  package.json
permissionmanager/src/main/: module.json  module.json5
permissionmanager/src/main/ets/Application/: AbilityStage.ts
permissionmanager/src/main/ets/GlobalExtAbility/: GlobalDialogModel.ets  GlobalDialogViewState.ets  GlobalExtAbility.ets  GlobalExtAbility.ts
permissionmanager/src/main/ets/MainAbility/: MainAbility.ts  UIExtSettingAbility.ts
permissionmanager/src/main/ets/PermissionSheet/: GlobalSwitchSheetAbility.ets  GlobalSwitchSheetDialog.ets  PermissionStateSheetAbility.ets  PermissionStateSheetDialog.ets
permissionmanager/src/main/ets/SecurityExtAbility/: SecurityExtAbility.ets  SecurityExtAbility.ts
permissionmanager/src/main/ets/ServiceExtAbility/: GrantDialogIntent.ets  GrantDialogModel.ets  GrantDialogViewModel.ets  GrantDialogViewState.ets  ServiceExtAbility.ets  ServiceExtAbility.ts
permissionmanager/src/main/ets/SpecificAbility/: SpecificAbility.ts
permissionmanager/src/main/ets/common/base/: BaseIntent.ets  BaseModel.ets  BasePermissionStrategy.ets  BaseState.ets  BaseViewModel.ets
permissionmanager/src/main/ets/common/components/: alphabeticalIndex.ets  backBar.ets  dialog.ets  location.ets  search.ets
permissionmanager/src/main/ets/common/model/: definition.ets  permissionGroup.ets  typedef.ets
permissionmanager/src/main/ets/common/utils/: constant.ets  (+7 more)
permissionmanager/src/main/ets/pages/: application-secondary.ets  application-tertiary.ets  authority-management.ets  authority-secondary.ets  authority-tertiary-groups.ets  authority-tertiary.ets  dialogPlus.ets  globalSwitch.ets  other-permissions.ets  permission-access-record.ets  securityDialog.ets  securityToast.ets  transition.ets
permissionmanager/src/main/resources/rawfile/: security_privacy.json
permissionmanager/src/ohosTest/: module.json5
permissionmanager/src/ohosTest/ets/test/: GlobalExtAbility.test.ets  GlobalSwitchSheetAbility.test.ets  List.test.ets  MainAbility.test.ets  PermissionStateSheetAbility.test.ets  SecurityExtAbility.test.ets  ServiceExtAbility.test.ets  utils.test.ets
(+101 files in other folders)
