import("//build/ohos.gni")

ohos_hap("permission_manager") {
  hap_profile = "src/main/module.json"
  deps = [
    ":permission_manager_js_assets",
    ":permission_manager_resources",
  ]
  certificate_profile = "../signature/pm.p7b"
  hap_name = "permission_manager"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
  js_build_mode = "debug"
}

ohos_app_scope("permission_manager_app_profile") {
  app_profile = "../AppScope/app.json"
  sources = [ "../AppScope/resources" ]
}

ohos_js_assets("permission_manager_js_assets") {
  ets2abc = true
  source_dir = "src/main/ets"
}

ohos_resources("permission_manager_resources") {
  sources = [ "src/main/resources" ]
  deps = [ ":permission_manager_app_profile" ]
  hap_profile = "src/main/module.json"
}
